# daily-planner

./: .gitignore  Dockerfile  README_REMARKABLE.md  config.example.json  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
kubernetes/: cronjob.yaml
planner/: __init__.py  __main__.py  config.py  main.py  pdf_generator.py  remarkable.py
planner/sources/: __init__.py  base.py  caldav_source.py  tracks_source.py
